# tomatotestagent

./: .gitignore  AGENTS.md  TestAgent_PRD.md  TestAgent_TDD.md  TestAgent_V2.0_Vibe_Coding_执行手册.md  TestAgent_Vibe_Coding_执行手册.md  USAGE_GUIDE.md  _test_api.py  alembic.ini  package-lock.json  pyproject.toml  run_migration.py
.github/workflows/: testagent.yml
agent/: __init__.py  analyzer.py  context.py  loop.py  planner.py  protocol.py  root_cause.py  test_data_generator.py  todo.py  tools.py
cli/: __init__.py  main.py  output.py  rag_cmd.py
common/: __init__.py  errors.py  logging.py  security.py
config/: settings.py
configs/: mcp.json.template  rag_config.yaml.template
dashboard/: index.html  package-lock.json  package.json  tsconfig.app.json
dashboard/src/: App.tsx  index.css
db/: __init__.py  engine.py  migrate_sqlite_to_pg.py  repository.py
db/alembic/: env.py
docker/: Dockerfile.api_runner  Dockerfile.harness  Dockerfile.web_runner  docker-compose.dev.yml  docker-entrypoint.api.sh  docker-entrypoint.web.sh
docs/: db_migration_verification.md  skill-development-guide.md
gateway/: __init__.py  app.py  celery_app.py  mcp_registry.py  router.py  session.py  tasks.py  websocket.py
harness/: __init__.py  docker_sandbox.py  local_runner.py  microvm_sandbox.py  orchestrator.py  resource.py  resource_scheduler.py  sandbox.py  sandbox_factory.py  snapshot.py
harness/runners/: __init__.py  base.py  http_runner.py  playwright_runner.py
llm/: local_provider.py  openai_provider.py
mcp_servers/database_server/: __init__.py  server.py
mcp_servers/git_server/: server.py  tools.py
mcp_servers/jira_server/: server.py
mcp_servers/playwright_server/: __init__.py  server.py  tools.py
models/: __init__.py  base.py  defect.py  mcp_config.py  plan.py  result.py  session.py  skill.py  snapshot.py
rag/: __init__.py  collections.py  embedding.py  factories.py  fulltext.py  fusion.py  ingestion.py  milvus_store.py  pipeline.py  reranker.py  vector_store.py  vector_store_factory.py
skills/: __init__.py  executor.py  matcher.py  templates.py  validator.py
skills/api_regression_test/: SKILL.md
skills/api_smoke_test/: SKILL.md
skills/app_smoke_test/: SKILL.md
skills/full_regression_test/: SKILL.md
skills/my_api_test/: README.md  SKILL.md
skills/web_smoke_test/: SKILL.md
skills/web_visual_test/: SKILL.md
testagent/: __main__.py
testagent/agent/: __init__.py  defect_dedup.py  defect_priority.py  executor.py  loop.py  quality_trends.py
testagent/cli/: __init__.py  junit.py  main.py  mcp_cmd.py  rag_cmd.py  skill_cmd.py
testagent/common/: logging.py
testagent/config/: __init__.py  defaults.py  settings.py
testagent/db/: __init__.py  engine.py  migrations.py
testagent/gateway/: __init__.py  app.py  celery_app.py  event_bus.py  mcp_router.py  middleware.py  router.py  session.py  websocket.py
testagent/harness/: __init__.py  docker_sandbox.py  microvm_sandbox.py  sandbox.py  (+3 more)
tests/: conftest.py
(+125 files in other folders)
